kubernetes/clusters/home/apps/blog/overlays/home/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  namespace: blog
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: blog
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: ghost.png
    gethomepage.dev/href: https://lucawalz.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=blog
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`lucawalz.dev`)
      kind: Rule
      services:
        - name: blog
          kind: TraefikService
          port: 80
  tls: {}
